DOF Focus object, not linked to new copy, Scen "full_copy" #64608

Closed
opened 2019-05-14 16:34:00 +02:00 by Maciej Jutrzenka · 4 comments
**System Information**
Operating system: Linux-4.15.0-48-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce 610M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116


**Blender Version**
Broken: version: 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-11 18:20, hash: `rBebc44aae9897`

Simple bug. if u duplicate scen "FULL COPY" the camera properties DOF focus objects is not linked correctly to the copy, however, all objects are duplicated correctly it is just that it is not linked to the new one.

``` **System Information** Operating system: Linux-4.15.0-48-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce 610M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-11 18:20, hash: `rBebc44aae9897` ``` Simple bug. if u duplicate scen "FULL COPY" the camera properties DOF focus objects is not linked correctly to the copy, however, all objects are duplicated correctly it is just that it is not linked to the new one.

Added subscriber: @MaciejJutrzenka

Added subscriber: @MaciejJutrzenka
Bastien Montagne was assigned by Sebastian Parborg 2019-06-11 17:07:20 +02:00

Next time, please attach minimal .blend file to help reproducing the issue, it always saves us time…

duplicate_scene_DOF_object.blend

Next time, please attach minimal .blend file to help reproducing the issue, it always saves us time… [duplicate_scene_DOF_object.blend](https://archive.blender.org/developer/F7098860/duplicate_scene_DOF_object.blend)

This issue was referenced by 42f4c14732

This issue was referenced by 42f4c147324f7d14f7d1cd3bcab20295176de846

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64608
No description provided.