Fix T64608: DOF Focus object, not linked to new copy, Scen "full_copy".

Note that there are probably many other similar cases... This code is
really legacy, should use library_query helpers and other modern
BKE_library code instead of doing its own dirty cooking...